@@ -31,6 +31,7 @@ Bugs fixed:
 - 1601644 Added more timing traces
 - 1605216 Fixed empty propertyList causes parser error
 - 1605234 Fixed parse error when IPARAMVALUE CLASSNAME is missing
+- 1606013 Fixed class provider segfault with deepInheritance=false
 
 Changes in 1.1.1
 ================
